app/pickbanscreen.css
:root {
    --team-a-color: lightsalmon;
    --team-b-color: lightskyblue;
}

.pickBanScreen {
    display: flex;
    flex-direction: column;
}

.headerBar {
    display: flex;
    gap: 50px;
    align-items: center;
}

.hostingStatus {
    display: flex;
    justify-content: end;
    font-size: x-small;
    flex: 1;
}

.quitButton {
    min-width: 50px;
    min-height: 20px;
    font-size: x-small;
    background-color: lightgray;
    border-style: hidden;
    padding: 5px;
    margin: 0px 0px 5px;
    transition-duration: 1s;
}

.quitButton:hover {
    background-color: red;
    color: white;
}

.timer {
    font-size: large;
    text-align: center;
}

.picksAndBans {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    column-gap: 20px;
    row-gap: 10px;
    min-height: 250px;
}

.teamAPicksAndBans {
    flex: 1;
    display: flex;
    border-style: solid;
    flex-direction: column;
    background-color: var(--team-a-color);
    padding: 10px;
    gap: 5px;
    min-height: 140px;
}

.teamBPicksAndBans {
    flex: 1;
    display: flex;
    flex-direction: column;
    border-style: solid;
    background-color: var(--team-b-color);
    padding: 10px;
    gap: 5px;
    min-height: 140px;
    font-size: smaller;
}

.teamAStatus {
    font-size: large;
    color: white;
    flex: 1;
    background-color: var(--team-a-color);
    text-align: center;
    min-height: 22px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.teamBStatus {
    color: white;
    font-size: large;
    flex: 1;
    background-color: var(--team-b-color);
    text-align: center;
    min-height: 22px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.heroCard {
    background-position: 50% 20%;
    background-size: 220%;
    max-width: 100px;
}

.heroCardName {
    background-color: rgba(0, 0, 0, 0.8);
    color: white;
    overflow-x: hidden;
}

.pickrow {
    justify-content: space-evenly;
    flex: 3;
    gap: 5px;
    display: flex;
}

.banrow {
    justify-content: space-evenly;
    flex: 1;
    gap: 5px;
    display: flex;
}

.pickrow>div {
    background-color: white;
    flex: 3;
    text-align: center;
    border-radius: px;
    border-style: solid;
    font-size: small;
    min-width: 40px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.banrow>div {
    flex: 1;
    background-color: white;
    text-align: center;
    border-radius: 5%;
    border-style: solid;
    font-size: small;
    min-width: 40px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    filter: grayscale(100%) opacity(50%);
}

.heroPicker {
    display: flex;
    gap: 10px;
    flex-wrap: wrap-reverse;
    justify-content: space-evenly;
    padding: 20px 0px;
}

.heroGrid {
    flex: 4;

    min-width: 210px;
    max-height: 300px;

    padding: 10px;
    overflow-y: auto;
    border-style: solid;

    display: grid;
    gap: 5px;
    grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
    grid-template-rows: repeat(auto-fill, 1fr);
}

.confirmbuttonAndInfo {
    min-width: 200px;
    flex: 1;
    display: flex;
    flex-direction: column;
    column-gap: 20px;
}


.confirmButton {
    margin: 10px;
    border-radius: 20px;
    min-height: 60px;
    transition-duration: 0.5s;
}

.confirmButton:hover:enabled {
    color: white;
    background-color: black;
}

.heroInfo {
    padding: 10px;
    min-height: 120px;

    border-style: solid;

    font-size: small;

    display: flex;
    flex-direction: column;
    justify-content: top;
    align-items: center;
}

.randomHeroInfo {
    background-color: lightgrey;
    font-size: xx-large;
}

.heroName {
    flex: 1;
    display: flex;
    align-items: center;
}

.difficultyLevel {
    flex: 1;
    font-size: large;
    display: flex;
    justify-content: center;
}

.heroStats {
    flex: 1;
    display: grid;
    width: 100%;
    height: 100%;
}

.heroStats>div {
    grid-template-rows: repeat(auto-fill, 1fr);
    grid-template-columns: repeat(auto-fill, 1fr);
}

.heroStat {
    min-height: 20px;
}

